Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33475

QGraphicsSimpleTextItem: When a pen is set on the item then it is not being used to draw the outline

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0 RC1
    • 5.1.1
    • Widgets: GraphicsView
    • None
    • 946c0925548adca627ef6c41b8e73e46cc48dbce

    Description

      QGraphicsSimpleTextItem: When a pen is set on the item then it is not being used to draw the outline. This is a regression against Qt 4.8. Attached is an example to reproduce this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ritt.ks Konstantin Ritt
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes