QGraphicsSimpleTextItem: Fix drawing the outline with pen, when set

QTextLayout's setAdditionalFormats() is expected to invalidate
the shaping results, so that the layouting must be done *after*
the format range(s) gets applied.

Task-number: QTBUG-33475
Change-Id: I6b948fc179da915545a98ac36f2c20163947ec9e
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>

cregit: 946c0925548adca627ef6c41b8e73e46cc48dbce https://github.com/qt/qtbase/commit/946c0925548adca627ef6c41b8e73e46cc48dbce